--- a/intelligent-chat-bot/src/main/resources/application.properties
+++ b/intelligent-chat-bot/src/main/resources/application.properties
@@ -3,5 +3,5 @@ spring.application.name=intelligent-chat-bot
 spring.data.mongodb.uri=mongodb://localhost:27017/chatbot
 
 openai.model=gpt-3.5-turbo
-openai.api.key=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
+openai.api.key=API-KEY
 openai.api.url=https://api.openai.com/v1/chat/completions
